Add docker. Format code. Update README